generate docs for others API
